--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,88 +1,9 @@
 ---
 import TopAnimation from '../components/TopAnimation.vue';
+import Layout from '../layouts/Layout.astro';
 ---
 
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	<div class="container">
-    <header>
-      <h1 class="text-xl">Teds</h1>
-      <ul>
-        <li>Latest</li>
-        <li>Blands</li>
-        <li>Collections</li>
-        <li class="active">Clearance</li>
-      </ul>
-    </header>
-    <section>
-      <h4>Clearance > <span>Tables</span></h4>
-    </section>
+<Layout title="My portfolio | TOP">
 		<TopAnimation client:load/>
 	</div>
-</body>
-</html>
-
-
-<style>
-	:root {
-		--green: #ecfaec;
-		--dark-green: #166639;
-		--white: #ffffff;
-		--black: #000000;
-	}
-
-	body {
-		min-height: 100vh;
-		background: var(--green);
-		display: grid;
-		place-items: center;
-		font-family: "poppins", sans-serif;
-		background-image: url("../../public/favicon.svg");
-		color: var(--black);
-	}
-
-.container {
-  width: 100%;
-  max-width: 900px;
-}
-
-a {
-  color: inherit;
-}
-
-header {
-  display: grid;
-  grid-template-columns: 100px 1fr;
-  padding: 2em 1em;
-  align-items: center;
-}
-
-h1 {
-  font-family: "Allura", cursive;
-  color: var(--dark-green);
-}
-header ul {
-  display: flex;
-}
-header li {
-  margin-right: 3em;
-  font-size: 0.85em;
-}
-section {
-  width: 100%;
-  padding: 1em;
-}
-section h4 {
-  opacity: 0.9;
-}
-li.active {
-  color: var(--dark-green);
-  border-bottom: 1px solid var(--dark-green);
-}
-</style>
+</Layout>
