--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,50 +2,63 @@
 interface Props {
 	title: string;
 }
-
 const { title } = Astro.props;
 ---
 
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>{title}</title>
+</head>
+<body >
+	<div class="container mx-auto">
+    <header class= "grid grid-cols-1 md:grid-cols-[200px_1fr] p-8 items-center">
+      <h1 class="text-xl"><a href="/">Infinity Node</a>
+			</h1>
+      <ul class="flex">
+        <li class="mr-12 text-[0.85em]">Price</li>
+        <li class="mr-12 text-[0.85em]">Skills</li>
+        <li class="mr-12 text-[0.85em]">Profile</li>
+        <li class="active mr-12 text-[0.85em]"><a href="https://github.com/teramae-masahiro/" target="_blank">Git hub</a></li>
+      </ul>
+    </header>
+	<slot />
+</body>
 </html>
+
+
 <style is:global>
+	@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap');
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+		--green: #ecfaec;
+		--dark-green: #166639;
+		--white: #ffffff;
+		--black: #000000;
 	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
+
+	body {
+		background: var(--green);
+		display: grid;
+		/* background-image: url("../../public/favicon.svg"); */
+		color: var(--black);
+		font-family: "Roboto", sans-serif;
 	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+	a {
+  color: inherit;
+}
+
+h1 {
+  color: var(--dark-green);
+}
+section {
+  width: 100%;
+  padding: 1em;
+}
+
+li.active {
+  color: var(--dark-green);
+  border-bottom: 1px solid var(--dark-green);
+}
 </style>
