--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
 import TopAnimation from '../components/TopAnimation.vue';
 import Layout from '../layouts/Layout.astro';
+import Telop from '../components/telop.astro';
 ---
 
 <Layout title="My portfolio | TOP">
 		<TopAnimation client:load/>
-	</div>
+		<Telop />
 </Layout>
