--- a/src/pages/works/[id].astro
+++ b/src/pages/works/[id].astro
@@ -13,12 +13,12 @@ const currentPath = Astro.request.url;
 <Layout title="Works Detail">
 <div class="flex mx-auto container gap-4">
   <div class="img-wrapper flex-1 basis-1/2">
-    <img src={`${currentPath}/${worksDetail[id].photo}`} alt={`${currentPath}/${worksDetail[id].title}`} />
+    <img src={`${currentPath}/${worksDetail[id].photo}`} alt={worksDetail[id].title} />
   </div>
   <div class="content-wrapper flex-1 basis-1/2">
-    <h1 class="text-2xl md:text-4xl mb-5">{`${currentPath}/${worksDetail[id].title}`}</h1>
-  <p>{`${currentPath}/${worksDetail[id].description}`}</p>
-  <a href={`${currentPath}/${worksDetail[id].url}`}>URL : {`${currentPath}/${worksDetail[id].title}`}</a>
+    <h1 class="text-2xl md:text-4xl mb-5">{worksDetail[id].title}</h1>
+  <p>{worksDetail[id].description}</p>
+  <a href={worksDetail[id].url}>URL : {worksDetail[id].title}</a>
   </div>
 </div>
 </Layout>
