--- a/src/pages/works/[id].astro
+++ b/src/pages/works/[id].astro
@@ -7,13 +7,13 @@ export function getStaticPaths() {
     }))
 }
 const { id } = Astro.params;
-const currentPath = Astro.request.url;
+const currentUrl = `../${worksDetail[id].photo}`;
 ---
 
 <Layout title="Works Detail">
 <div class="flex mx-auto container gap-4">
   <div class="img-wrapper flex-1 basis-1/2">
-    <img src={`${currentPath}/${worksDetail[id].photo}`} alt={worksDetail[id].title} />
+    <img src={currentUrl} alt={worksDetail[id].title} />
   </div>
   <div class="content-wrapper flex-1 basis-1/2">
     <h1 class="text-2xl md:text-4xl mb-5">{worksDetail[id].title}</h1>
