--- a/src/pages/news/[postId].astro
+++ b/src/pages/news/[postId].astro
@@ -18,7 +18,7 @@ const post = await getBlogsDetail(postId)
   <div class="content-wrapper ">
     <h1 class="text-2xl md:text-4xl mb-5">{post.title}</h1>
   <a href={post.url}>URL : {post.url}</a>
-  <p>{post.description}</p>
+  <div set-html={post.description} />
   </div>
 </div>
 </Layout>
