--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
 </head>
 <body >
 	<div class="container mx-auto">
-    <header class= "grid grid-cols-1 md:grid-cols-[200px_1fr] p-8 items-center">
+    <header class= "grid grid-cols-1 md:grid-cols-[200px_1fr] p-4 md:p-8 items-center">
       <h1 class="text-xl"><a href="/">Infinity Node</a>
 			</h1>
       <ul class="flex">
