--- a/src/pages/news/[postId].astro
+++ b/src/pages/news/[postId].astro
@@ -16,9 +16,38 @@ const post = await getBlogsDetail(postId)
 <Layout title="Works Detail">
 <div class="mx-auto container">
   <div class="content-wrapper ">
-    <h1 class="text-2xl md:text-4xl mb-5">{post.title}</h1>
-  <a href={post.url}>URL : {post.url}</a>
+    <h1 class="text-2xl md:text-3xl mb-5">{post.title}</h1>
   <div set:html={post.description} />
   </div>
 </div>
 </Layout>
+
+
+<style is:global>
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    margin-bottom: 1.5rem;
+    border: 1px solid #dee2e6;
+    text-align: left;
+  }
+  th,td {
+    padding: 0.75rem;
+    vertical-align: top;
+    border: 1px solid #dee2e6;
+    width: 100%;
+    flex-basis: 20%;
+  }
+  tr {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  @media (max-width: 768px) {
+    th,td {
+
+      width:100px
+    }
+  }
+
+</style>
