--- a/src/pages/works/[id].astro
+++ b/src/pages/works/[id].astro
@@ -11,7 +11,7 @@ const currentUrl = `../../${worksDetail[id].photo}`;
 ---
 
 <Layout title="Works Detail">
-<div class="flex mx-auto container gap-4">
+<div class="flex mx-auto container gap-4 flex-col md:flex-row p-5">
   <div class="img-wrapper flex-1 basis-1/2">
     <img src={currentUrl} alt={worksDetail[id].title} />
   </div>
