--- a/src/pages/news/[postId].astro
+++ b/src/pages/news/[postId].astro
@@ -13,10 +13,10 @@ const { postId } = Astro.params;
 const post = await getBlogsDetail(postId)
 ---
 
-<Layout title="Works Detail">
-<div class="mx-auto container">
-  <div class="content-wrapper ">
-    <h1 class="text-2xl md:text-3xl mb-5">{post.title}</h1>
+<Layout title="News Detail | Infinity Node">
+<div class="mx-auto container p-4 bg-white">
+  <div class="content-wrapper">
+    <h1 class="text-xl md:text-3xl mb-5">{post.title}</h1>
   <div set:html={post.description} />
   </div>
 </div>
