--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,9 @@ const { title } = Astro.props;
     </header>
 	<slot />
 </div>
+<footer class="bg-white grid grid-cols-1 items-center">
+	<small>©Infinity Node</small>
+</footer>
 </body>
 </html>
 
