--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,5 +4,5 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title=" お問い合わせ |  Infinity Node ">
-<Mail client:idle/>
+<Mail />
 </Layout>
