--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,6 +3,5 @@ import Mail from '../components/mail.vue';
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title=" お問い合わせ |  Infinity Node ">
-<Mail />
-</Layout>
+
+<Mail client:load/>
