--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -3,5 +3,6 @@ import Mail from '../components/mail.vue';
 import Layout from '../layouts/Layout.astro';
 ---
 
-
-<Mail client:load/>
+<Layout title=" お問い合わせ |  Infinity Node ">
+<Mail client:only/>
+</Layout>
