--- a/src/pages/news/[postId].astro
+++ b/src/pages/news/[postId].astro
@@ -16,7 +16,7 @@ const post = await getBlogsDetail(postId)
 <Layout title="News Detail | Infinity Node">
 <div class="mx-auto container p-4 bg-white">
   <div class="content-wrapper">
-    <h1 class="text-xl md:text-3xl mb-5">{post.title}</h1>
+    <h1 class="text-xl md:text-2xl mb-5 color-black">{post.title}</h1>
   <div set:html={post.description} />
   </div>
 </div>
@@ -24,6 +24,20 @@ const post = await getBlogsDetail(postId)
 
 
 <style is:global>
+  p {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+  @media (max-width: 768px) {
+    p {
+      font-size: 13px;
+    }
+  }
+  .note {
+    font-size: 12px;
+    color: #999;
+    margin-bottom: 10px;
+  }
   table {
     border-collapse: collapse;
     border-spacing: 0;
