--- a/src/pages/works/[id].astro
+++ b/src/pages/works/[id].astro
@@ -17,8 +17,8 @@ const currentUrl = `../../${worksDetail[id].photo}`;
   </div>
   <div class="content-wrapper flex-1 basis-1/2">
     <h1 class="text-2xl md:text-3xl mb-5">{worksDetail[id].title}</h1>
-  <p class="text-sm md:text-md text-black">{worksDetail[id].description}</p>
-  <a class="border-b-1 border-white mt-4" href={worksDetail[id].url}>URL : {worksDetail[id].title}</a>
+  <p class="text-sm md:text-md text-black mb-4">{worksDetail[id].description}</p>
+  <a class="border-b-1 border-black text-sm md:text-md" href={worksDetail[id].url}>URL : {worksDetail[id].title}</a>
   </div>
 </div>
 </Layout>
