--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -3,5 +3,84 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title=" プロフィール |  Infinity Node ">
-プロフィール(制作中)
+  <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
+  <section class="pt-16 bg-blueGray-50">
+  <div class="w-full lg:w-4/12 px-4 mx-auto">
+    <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg mt-16">
+      <div class="px-6">
+        <div class="flex flex-wrap justify-center">
+          <div class="w-full px-4 flex justify-center">
+            <div class="relative">
+              <img alt="..." src="https://demos.creative-tim.com/notus-js/assets/img/team-2-800x800.jpg" class="shadow-xl rounded-full h-auto align-middle border-none absolute -m-16 -ml-20 lg:-ml-16 max-w-150-px">
+            </div>
+          </div>
+          <div class="w-full px-4 text-center mt-20">
+            <div class="flex justify-center py-4 lg:pt-4 pt-8">
+              <div class="mr-4 p-3 text-center">
+                <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">
+                  36
+                </span>
+                <span class="text-sm text-blueGray-400">HP制作(2023年)</span>
+              </div>
+              <div class="mr-4 p-3 text-center">
+                <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">
+                  20
+                </span>
+                <span class="text-sm text-blueGray-400">LP制作(2023年)</span>
+              </div>
+              <div class="lg:mr-4 p-3 text-center">
+                <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">
+                  10
+                </span>
+                <span class="text-sm text-blueGray-400">ディレクション(2023年)</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="text-center mt-12">
+          <h3 class="text-xl font-semibold leading-normal mb-2 text-blueGray-700 mb-2">
+            寺前 真宏
+          </h3>
+          <div class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase">
+            <i class="fas fa-map-marker-alt mr-2 text-lg text-blueGray-400"></i>
+            ディレクター & プログラマー
+          </div>
+          <div class="mb-2 text-blueGray-600 mt-10">
+            <i class="fas fa-briefcase mr-2 text-lg text-blueGray-400"></i>
+            スキル
+          </div>
+          <div class="mb-2 text-blueGray-600">
+            <i class="fas fa-university mr-2 text-lg text-blueGray-400"></i>
+           GTM |  GA4 | Looker Studio | BigQuery | <br>
+           Astro.js | Vue.js | GSAP | Tailwind CSS | JavaScript | WordPress
+          </div>
+        </div>
+        <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
+          <div class="flex flex-wrap justify-center">
+            <div class="w-full lg:w-9/12 px-4">
+              <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
+                An artist of considerable range, Jenna the name taken
+                by Melbourne-raised, Brooklyn-based Nick Murphy
+                writes, performs and records all of his own music,
+                giving it a warm, intimate feel with a solid groove
+                structure. An artist of considerable range.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <footer class="relative  pt-8 pb-6 mt-8">
+    <div class="container mx-auto px-4">
+      <div class="flex flex-wrap items-center md:justify-between justify-center">
+        <div class="w-full md:w-6/12 px-4 mx-auto text-center">
+          <div class="text-sm text-blueGray-500 font-semibold py-1">
+            Infinity Node
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  </section>
 </Layout>
