--- a/src/pages/price.astro
+++ b/src/pages/price.astro
@@ -1,7 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import HomeBtn from '../components/btn.astro';
+import Footer from '../components/footer.astro';
 ---
 
 <Layout title=" 料金表 |  Infinity Node ">
 料金表(制作中)
+<HomeBtn />
+<Footer />
 </Layout>
