--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ const { title } = Astro.props;
 	<title>{title}</title>
 </head>
 <body >
-	<div class="container mx-auto">
+	<div class="container mx-auto min-h-screen">
     <header class= "grid grid-cols-1 md:grid-cols-[200px_1fr] p-4 md:p-8 items-center">
       <h1 class="text-xl mb-5 md:mb-0"><a href="/">Infinity Node</a>
 			</h1>
