--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,8 +1,10 @@
 ---
 import Mail from '../components/mail.vue';
 import Layout from '../layouts/Layout.astro';
+import Footer from '../components/footer.astro';
 ---
 
 <Layout title=" お問い合わせ |  Infinity Node ">
 <Mail client:load/>
+<Footer />
 </Layout>
