--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -1,36 +1,35 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import HomeBtn from '../components/btn.astro';
+import Footer from '../components/footer.astro';
 ---
 
 <Layout title=" プロフィール |  Infinity Node ">
-  <!-- <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css"> -->
-  <section class="pt-16 bg-blueGray-50">
+  <section class="pt-8 bg-blueGray-50">
   <div class="w-full px-4 mx-auto">
-    <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg mt-16">
+    <div class="relativeflex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg mt-16">
       <div class="px-6">
         <div class="flex flex-wrap justify-center">
-          <div class="w-full px-4 flex justify-center">
-            <div class="relative">
-              <img alt="寺前 真宏" src="../public/assets/portfolio.png" class="shadow-xl rounded-full h-auto align-middle border-none absolute -m-16 -ml-20 lg:-ml-16 max-w-150-px">
-            </div>
-          </div>
           <div class="w-full px-4 text-center mt-20">
+            <div class="px-4 grid justify-center">
+                <img alt="寺前 真宏" src="assets/portfolio.png" class="w-52 object-top  shadow-xl rounded-full h-auto align-middle border-none ">
+            </div>
             <div class="flex justify-center py-4 lg:pt-4 pt-8">
               <div class="mr-4 p-3 text-center">
                 <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">
-                  36
+                  36 <span class="text-sm">件</span>
                 </span>
                 <span class="text-sm text-blueGray-400">HP制作(2023年)</span>
               </div>
               <div class="mr-4 p-3 text-center">
                 <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">
-                  24
+                  24 <span class="text-sm">件</span>
                 </span>
                 <span class="text-sm text-blueGray-400">GTM,GA4(2023年)</span>
               </div>
               <div class="lg:mr-4 p-3 text-center">
                 <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">
-                  10
+                  10 <span class="text-sm">件</span>
                 </span>
                 <span class="text-sm text-blueGray-400">ディレクション(2023年)</span>
               </div>
@@ -47,12 +46,22 @@ import Layout from '../layouts/Layout.astro';
           </div>
           <div class="mb-2 text-blueGray-600 mt-10">
             <i class="fas fa-briefcase mr-2 text-lg text-blueGray-400"></i>
-            スキル
+            対応可能な業務
           </div>
           <div class="mb-2 text-blueGray-600">
             <i class="fas fa-university mr-2 text-lg text-blueGray-400"></i>
            GTM |  GA4 | Looker Studio | BigQuery | <br>
            Astro | Vue.js | GSAP | Tailwind CSS | JavaScript | WordPress
+          </div>
+          <div class="mb-2 text-blueGray-600 mt-10">
+            <i class="fas fa-briefcase mr-2 text-lg text-blueGray-400"></i>
+            昨年度の主な実績
+          </div>
+          <div class="mb-2 text-blueGray-600">
+            <i class="fas fa-university mr-2 text-lg text-blueGray-400"></i>
+           ・GTM導入 :  大手不動産会社様 / 20サイト設置とデータレイヤー設計<br>
+           ・GA4、Looker Studio :  外資系企業やスタートアップ企業の担当者様へ講義<br>
+           ・HP制作 : 上場企業様2社、スタートアップ企業様HP3社、その他30社<br>
           </div>
         </div>
         <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
@@ -61,28 +70,17 @@ import Layout from '../layouts/Layout.astro';
               <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
                 はじめまして。寺前と申します。<br>
                 この度は、私のポートフォリオサイトをご覧いただきありがとうございます。<br>
-                私は、現在、Webディレクターとして、HP制作やディレクションを行っております。<br>
-                また、Webディレクターとしての経験を活かし、GTMやGA4の導入や、Looker Studioの構築なども行っております。<br>
-                今後とも、よろしくお願いいたします。<br>
+                現在、HP制作やディレクションを行っております。<br>
+                GTMやGA4<span class="text-sm">（資格保有）</span>の導入や、Looker Studioの構築なども行っております。<br>
+                よろしくお願いいたします。<br>
               </p>
             </div>
           </div>
+          <HomeBtn />
         </div>
       </div>
     </div>
   </div>
-  <footer class="relative  pt-8 pb-6 mt-8">
-    <div class="container mx-auto px-4">
-      <div class="flex flex-wrap items-center md:justify-between justify-center">
-        <div class="w-full md:w-6/12 px-4 mx-auto text-center">
-          <div class="text-sm text-blueGray-500 font-semibold py-1">
-            Infinity Node
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
   </section>
+  <Footer/ >
 </Layout>
-
-
