--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,16 +13,16 @@ const { title } = Astro.props;
 	<title>{title}</title>
 </head>
 <body >
-	<div class="container mx-auto min-h-screen">
+	<div class="container mx-auto min-h-screen grid">
     <header class= "grid grid-cols-1 md:grid-cols-[200px_1fr] p-4 md:p-8 items-center">
       <h1 class="text-xl mb-5 md:mb-0"><a href="/">Infinity Node</a>
 			</h1>
       <ul class="flex">
-        <li class="mr-12 text-[0.85em]"><a href="/profile">Profile</a></li>
-        <li class="mr-12 text-[0.85em]"><a href="/price">Price</a></li>
-        <li class="mr-12 text-[0.85em]"><a href="/contact">Contact</a></li>
+        <li class="mr-8 md:mr-12 text-[0.85em]"><a href="/profile">Profile</a></li>
+        <li class="mr-8 md:mr-12 text-[0.85em]"><a href="/price">Price</a></li>
+        <li class="mr-8 md:mr-12 text-[0.85em]"><a href="/contact">Contact</a></li>
 				</li>
-        <li class="active mr-12 text-[0.85em]"><a href="https://github.com/teramae-masahiro/" target="_blank">Git hub</a></li>
+        <li class="active mr-8 md:mr-12 text-[0.85em]"><a href="https://github.com/teramae-masahiro/" target="_blank">Git hub</a></li>
       </ul>
     </header>
 	<slot />
