--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -14,20 +14,20 @@ import Footer from '../components/footer.astro';
             <div class="px-4 grid justify-center">
                 <img alt="寺前 真宏" src="assets/portfolio.png" class="w-52 object-top  shadow-xl rounded-full h-auto align-middle border-none ">
             </div>
-            <div class="flex justify-center py-4 lg:pt-4 pt-8">
-              <div class="mr-4 p-3 text-center">
+            <div class="flex flex-col md:flex-row justify-center py-4 lg:pt-4 pt-8">
+              <div class="md:mr-4 p-3 text-center">
                 <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">
                   36 <span class="text-sm">件</span>
                 </span>
                 <span class="text-sm text-blueGray-400">HP制作(2023年)</span>
               </div>
-              <div class="mr-4 p-3 text-center">
+              <div class="md:mr-4 p-3 text-center">
                 <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">
                   24 <span class="text-sm">件</span>
                 </span>
                 <span class="text-sm text-blueGray-400">GTM,GA4(2023年)</span>
               </div>
-              <div class="lg:mr-4 p-3 text-center">
+              <div class="p-3 text-center">
                 <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">
                   10 <span class="text-sm">件</span>
                 </span>
@@ -54,11 +54,11 @@ import Footer from '../components/footer.astro';
            Astro | Vue.js | GSAP | Tailwind CSS | JavaScript | WordPress
           </div>
           <div class="mb-2 text-blueGray-600 mt-10">
-            <i class="fas fa-briefcase mr-2 text-lg text-blueGray-400"></i>
+            <i class="fas fa-briefcase mr-2 text-xs md:text-lg text-blueGray-400"></i>
             昨年度の主な実績
           </div>
           <div class="mb-2 text-blueGray-600">
-            <i class="fas fa-university mr-2 text-lg text-blueGray-400"></i>
+            <i class="fas fa-university mr-2 text-xs md:text-lg text-blueGray-400"></i>
            ・GTM導入 :  大手不動産会社様 / 20サイト設置とデータレイヤー設計<br>
            ・GA4、Looker Studio :  外資系企業やスタートアップ企業の担当者様へ講義<br>
            ・HP制作 : 上場企業様2社、スタートアップ企業様HP3社、その他30社<br>
@@ -67,7 +67,7 @@ import Footer from '../components/footer.astro';
         <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
           <div class="flex flex-wrap justify-center">
             <div class="w-full lg:w-9/12 px-4">
-              <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
+              <p class="mb-4 text-sm md:text-lg leading-relaxed text-blueGray-700">
                 はじめまして。寺前と申します。<br>
                 この度は、私のポートフォリオサイトをご覧いただきありがとうございます。<br>
                 現在、HP制作やディレクションを行っております。<br>
