--- a/src/pages/price.astro
+++ b/src/pages/price.astro
@@ -2,10 +2,12 @@
 import Layout from '../layouts/Layout.astro';
 import HomeBtn from '../components/btn.astro';
 import Footer from '../components/footer.astro';
+import TabList from '../components/tabList.vue';
 ---
 
 <Layout title=" 料金表 |  Infinity Node ">
-料金表(制作中)
+料金表
+<TabList client:load />
 <HomeBtn />
 <Footer />
 </Layout>
