--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -12,7 +12,7 @@ import Footer from '../components/footer.astro';
         <div class="flex flex-wrap justify-center">
           <div class="w-full px-4 text-center mt-20">
             <div class="px-4 grid justify-center">
-                <img alt="寺前 真宏" src="assets/person.png" class="w-52 object-top  shadow-xl rounded-full h-auto align-middle border-none ">
+                <img alt="寺前 真宏" src="../assets/person.png" class="w-52 object-top  shadow-xl rounded-full h-auto align-middle border-none ">
             </div>
             <div class="flex flex-col md:flex-row justify-center py-4 lg:pt-4 pt-8">
               <div class="md:mr-4 p-3 text-center">
