--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,11 +8,22 @@ const { title } = Astro.props;
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-PPZ32NTB');</script>
+	<!-- End Google Tag Manager -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{title}</title>
 </head>
 <body >
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PPZ32NTB"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 	<div class="container mx-auto min-h-screen grid">
     <header class= "grid grid-cols-1 md:grid-cols-[200px_1fr] p-4 md:p-8 items-center">
       <h1 class="text-xl mb-5 md:mb-0"><a href="/">Infinity Node</a>
